--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,10 @@ body {
 .card-head>img{
 margin-bottom: 30px;
 }
-
+.card-head>h6{
+  color: hsl(236, 100%, 87%);
+  font-weight: 400;
+}
 .card-head>h2{
   margin: 10px 0 30px 0;
 }
@@ -72,7 +75,10 @@ margin-bottom: 30px;
   flex-direction: column;
   gap: 20px;
 }
-
+h2{
+  font-size: 50px;
+  font-weight: 300;
+}
 /* card-styling */
 .work-card{
   background-color: hsl(15, 100%, 70%);
@@ -84,14 +90,8 @@ margin-bottom: 30px;
   justify-content: end;
    padding: 0 20px;
    overflow: hidden;
+   height: 25%;
  }
-
-.card {
-  position: relative; 
-  background-color: rgba(255, 255, 255, 0.8); 
-  padding: 20px; 
-  z-index: 2; 
-}
 
 
 .work-description{
@@ -101,6 +101,8 @@ margin-bottom: 30px;
   padding: 20px;
   margin-top: -20px;
   border-radius: 15px;
+  width: 100%;
+  height: 85%;
   
 
 }
@@ -123,6 +125,8 @@ margin-bottom: 30px;
 .play-card{
   background-color: hsl(195, 74%, 62%);
   border-radius: 15px;
+  width: 100%;
+  height: 100%;
   /* margin: 10px; */
   grid-area: playc;
 }
@@ -131,7 +135,9 @@ margin-bottom: 30px;
   background-color: hsl(348, 100%, 68%);
   /* width: 18%; */
   border-radius: 15px;
-  margin: 10px;
+  width: 100%;
+  height: 100%;
+  /* margin: 10px; */
   grid-area: studyc;
 }
 
@@ -139,7 +145,7 @@ margin-bottom: 30px;
   background-color: hsl(145, 58%, 55%);
   /* width: 18%; */
   border-radius: 15px;
-  margin: 10px;
+  /* margin: 10px; */
   grid-area: exercisec;
 }
 
@@ -147,7 +153,9 @@ margin-bottom: 30px;
   background-color: hsl(264, 64%, 52%);
   /* width: 18%; */
   border-radius: 15px;
-  margin: 10px;
+  width: 100%;
+  height: 100%;
+  /* margin: 10px; */
   grid-area: socialc;
 }
 
@@ -155,20 +163,10 @@ margin-bottom: 30px;
   background-color: hsl(43, 84%, 65%);
   /* width: 18%; */
   border-radius: 15px;
-  margin: 10px;
+  width: 100%;
+  height: 100%;
+  /* margin: 10px; */
   grid-area: self-carec;
-}
-
-/* footer styling */
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-
-
-.attribution a {
-  color: hsl(228, 45%, 44%);
 }
 
 
